--- a/style.css
+++ b/style.css
@@ -5,5 +5,32 @@
 }
 
 body{
-    background-color: rgb(219, 240, 229);
+    background: #fafafa;
+    background: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(75, 227, 138, 1) 51%, rgba(255, 255, 255, 1) 100%);
+    padding: 2em;
+    width: 100%;
+    height: 100vh;
+    z-index: 0;
+}
+
+.formulario {
+    width: 100%;
+    height: 100VH;
+    background: #86fc8a;
+    background: linear-gradient(90deg, rgba(134, 252, 138, 0.28) 0%, rgba(87, 199, 133, 1) 50%, rgba(111, 237, 83, 0.83) 100%),;
+    background-image: url('./img/icon-whatsapp.png');
+    background-repeat: no-repeat;
+    
+    background-size: cover;
+    background-position: center;
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+    border: 0.5px solid #27272777;
+    border-radius: 0.25rem;
+    z-index: 0;
+}
+
+.acessar-whatsapp {
+    width: 30%;
+    height: 60%;
 }
