--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body{
     background: #fafafa;
-    background: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(75, 227, 138, 1) 51%, rgba(255, 255, 255, 1) 100%);
-    padding: 2em;
+    background: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(78, 227, 140, 1) 11%, rgba(75, 227, 138, 1) 94%, rgba(250, 250, 250, 1) 100%);
+    padding: 1.0rem;
     width: 100%;
     height: 100vh;
     z-index: 0;
@@ -15,7 +15,7 @@ body{
 
 .formulario {
     width: 100%;
-    height: 100VH;
+    height: 90VH;
     background: #86fc8a;
     background: linear-gradient(90deg, rgba(134, 252, 138, 0.28) 0%, rgba(87, 199, 133, 1) 50%, rgba(111, 237, 83, 0.83) 100%),;
     background-image: url('./img/icon-whatsapp.png');
@@ -27,10 +27,20 @@ body{
     margin-bottom: 1rem;
     border: 0.5px solid #27272777;
     border-radius: 0.25rem;
-    z-index: 0;
+    z-index: 1;
 }
 
 .acessar-whatsapp {
-    width: 30%;
-    height: 60%;
+    width: 40vh;
+    height: 10vh;
+    background: #22c3b0;
+    background: linear-gradient(6deg, rgba(34, 195, 176, 1) 0%, rgba(114, 253, 45, 1) 100%);
+    position: relative;
+}
+
+.informe-numero{
+    width: 90vh;
+    height: 10vh;
+    background: #22c3b0;
+    background: linear-gradient(6deg, rgba(34, 195, 176, 1) 0%, rgba(114, 253, 45, 1) 100%);
 }
