--- a/style.css
+++ b/style.css
@@ -46,6 +46,25 @@ body{
 
 /*Fazendo o css da área principal dos contatos.*/
 
-.caixaContato{
+
+.contatos-whatsapp{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    flex-direction: column;
     background-color: white;
+    width: 50%;
+}
+
+.caixaContato{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border: 1px solid black;
+}
+
+.headerUsuario{
+    background-color: red;
+    width: 200px;
+    height: 200px;
 }
