--- a/style.css
+++ b/style.css
@@ -4,45 +4,62 @@
     box-sizing: border-box;
 }
 
+:root{
+--bg-primary: #161717;
+--bg-secundary: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(78, 227, 140, 1) 11%, rgba(75, 227, 138, 1) 94%, rgba(250, 250, 250, 1) 100%);
+--pd-primary: linear-gradient(6deg, rgba(34, 195, 176, 1) 0%, rgba(114, 253, 45, 1) 100%)
+}
+
 body{
+    display: flex;
+    justify-content: center;
     background: #fafafa;
-    background: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(78, 227, 140, 1) 11%, rgba(75, 227, 138, 1) 94%, rgba(250, 250, 250, 1) 100%);
-    padding: 1.0rem;
-    width: 100%;
-    height: 100vh;
+    background: var(--bg-secundary);
+    width: 100dvw;
+    height: 100dvh;
     z-index: 0;
 }
 
 .formulario {
-    width: 100%;
-    height: 90VH;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    width: 90dvw;
+    height: 90dvH;
+    margin-top: 2rem;
     background: #86fc8a;
-    background: linear-gradient(90deg, rgba(134, 252, 138, 0.28) 0%, rgba(87, 199, 133, 1) 50%, rgba(111, 237, 83, 0.83) 100%),;
     background-image: url('./img/icon-whatsapp.png');
-    background-repeat: no-repeat;
-    
     background-size: cover;
     background-position: center;
-    margin-bottom: 1rem;
-    border: 0.5px solid #27272777;
+    border: 7px solid #000000c2;
     border-radius: 0.25rem;
     z-index: 1;
+    gap: 5rem;
+}
+
+.zap{
+    margin-top: 5rem;
+    font-size: 4rem;
+}
+
+.informe-numero{
+    padding: 20px;
+    width: 85vw;
+    height: 5vh;
+    background: #22c3b0;
+    background: var(--pd-primary);
+    padding: 2rem;
 }
 
 .acessar-whatsapp {
     width: 40vw;
-    height: 5vh;
+    height: 10vh;
     background: #22c3b0;
-    background: linear-gradient(6deg, rgba(34, 195, 176, 1) 0%, rgba(114, 253, 45, 1) 100%);
-    position: relative;
+    background: var(--pd-primary);
 }
 
-.informe-numero{
-    width: 90vw;
-    height: 5vh;
-    background: #22c3b0;
-    background: linear-gradient(6deg, rgba(34, 195, 176, 1) 0%, rgba(114, 253, 45, 1) 100%);
-}
+
 
 /*Fazendo o css da área principal dos contatos.*/
 
@@ -64,7 +81,7 @@ body{
 }
 
 .headerUsuario{
-    background-color: red;
-    width: 200px;
-    height: 200px;
+    background-color: var(--bg-primary);
+    width: 50dvw;
+    height: 10dvh;
 }
